# esp32-sound

./: .gitignore  Cargo.toml  command.sh  happy_bday.py  mic_pin_map.txt  mic_pin_t_embed.txt  rust-toolchain.toml  story_patterns.rs  test_sd.py  wave_graph.md  wavy_pattern_gen.py
.cargo/: config.toml
i2s_recorder/: CMakeLists.txt  fix_build.sh  partitions.csv  sdkconfig  sdkconfig.defaults
i2s_recorder/main/: CMakeLists.txt  Kconfig.projbuild  i2s_recorder_main.c
src/: happy_birthday_audio.rs  main.rs  memory.x  pattern_gen.rs
