
[package]
name = "esp32-sound"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1" }
esp-println = { version = "0.10.0", features = ["log"] }
critical-section = "1.1"
portable-atomic = { version = "1.0", features = ["critical-section"] }

# Features for different target chips
[features]
default = []
esp32c6 = ["esp-backtrace/esp32c6", "esp-hal/esp32c6", "esp-println/esp32c6"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3"]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[[bin]]
name = "esp32-sound"
test = false
bench = false

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
