[package]
name = "esp32-sound"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32h2",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.10.0", features = ["esp32h2"] }
esp-hal = { version = "0.20.1", features = ["esp32h2"] }
critical-section = "1.1"
portable-atomic = { version = "1.0", features = ["critical-section"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
